# uv-assignment

./: .gitignore  README.md
packaged-app/: README.md  pyproject.toml
packaged-app/src/my_packaged_app/: main.py
simple-app/: README.md  main.py  pyproject.toml
